--- a/templates/profile.html
+++ b/templates/profile.html
@@ -96,7 +96,7 @@
                  {% csrf_token %}
                 <h2 class="form_inputs_head">Profile Setup</h2>
                 <p class="form_inputs_head_info">
-                    Kindly fill out this form and add a photo to setup your Jobify profile.
+                    Kindly fill out this form to setup your Jobify profile.
                 </p>
                 
                 <div class="main_form">
