--- a/templates/editjob.html
+++ b/templates/editjob.html
@@ -42,9 +42,9 @@
     </nav>
     <section class="init-body">
         <section class="profile">
-            <div class="profile_img">
+            <!-- <div class="profile_img">
                 <img src="../static/img/andre-benz-qJfznuTMAYA-unsplash.jpg">
-            </div>
+            </div> -->
             <h3 class="profile_name">{{user.first_name}} {{user.last_name}}</h3>
             <h4 class="profile_talent">{{user_profile.talent}}</h4>
             <h5 class="profile_location">{{user_profile.user_location}}</h5>
