Modified the styling

--- a/static/edit.css
+++ b/static/edit.css
@@ -166,6 +166,14 @@ nav {
     background: #EBEBEB;
     box-shadow: 0px 4px 4px rgba(30, 30, 30, 0.1);
     border-radius: 8px;
+    border: 0.5px solid #EBEBEB;
+}
+.profile .profile_contact .profile_bio li{
+    margin-top: 15px;
+    background: #EBEBEB;
+    box-shadow: 0px 4px 4px rgba(30, 30, 30, 0.1);
+    border-radius: 8px;
+    border: 0.5px solid #EBEBEB;
 }
 
 .profile_bio li a {
@@ -474,7 +482,7 @@ footer {
     .menu {
         position: fixed;
         width: 0;
-        height: 60%;
+        height: 100%;
         right: 0;
         top: 0;
         margin: auto;
@@ -547,7 +555,7 @@ footer {
         cursor: pointer;
         transition: all 0.3s ease-in-out;
         color: rgb(158, 158, 158);
-        font-size: 55px;
+        font-size: 35px;
     }
 
     .menu-close:hover {
@@ -627,53 +635,53 @@ footer {
         font-size: 24px;
         font-weight: 700;
         text-align: center;
-        margin-bottom: 12px;
+        /* margin-bottom: 22px; */
     }
-
+    
     .profile_mobile_talent {
         font-size: 24px;
         font-weight: 700;
         text-align: center;
-        margin-bottom: 6px;
+        margin-bottom: 5px;
     }
-
+    
     .profile_mobile_location {
         font-size: 24px;
         font-weight: 700;
         text-align: center;
     }
-
     .profile_mobile_portfolio p a {
         color: #8325B0;
     }
-
+    
     .profile_mobile_bio {
         color: black;
         margin: auto;
         font-size: 24px;
         padding: 0px 10px;
     }
-
+    
     .profile_mobile_bio li {
         padding: 7px;
         list-style: none;
         text-align: center;
     }
-
+    
     .profile_mobile_bio li a {
         text-decoration: none;
         color: #8325B0;
+        font-size: 20px;
     }
-
-    .profile_mobile_skills ul li {
+    .profile_mobile_skills{
+        padding: 0px;
+    }
+    .profile_mobile_skills ul li{
         color: black;
         font-size: 16px;
     }
-
-    .profile_mobile {
+    .profile_mobile{
         color: black;
     }
-
     .port_mobile_link {
         text-align: center;
     }
@@ -682,7 +690,7 @@ footer {
         position: absolute;
         top: 0;
         right: 0;
-        font-size: 65px;
+        font-size: 35px;
     }
 }
 
@@ -825,56 +833,63 @@ footer {
     }
 
     .profile_mobile_name {
-        font-size: 16px;
         font-weight: 700;
         text-align: center;
-        margin-bottom: 52px;
+        margin-bottom: 12px;
     }
-
+    
     .profile_mobile_talent {
-        font-size: 12px;
+        font-size: 18px;
         font-weight: 700;
         text-align: center;
-        margin-bottom: 5px;
+        margin-bottom: 6px;
     }
-
+    
     .profile_mobile_location {
         font-size: 12px;
         font-weight: 700;
         text-align: center;
     }
-
     .profile_mobile_portfolio p a {
         color: #8325B0;
     }
-
+    
     .profile_mobile_bio {
         color: black;
         margin: auto;
         font-size: 12px;
         padding: 0px 10px;
     }
-
+    /* .profile_mobile_skills .profile_mobile_bio{
+        margin-bottom: 0px;
+    } */
     .profile_mobile_bio li {
         padding: 7px;
         list-style: none;
         text-align: center;
     }
-
+    
     .profile_mobile_bio li a {
         text-decoration: none;
         color: #8325B0;
     }
+    .profile_mobile_skills .profile_mobile_bio li{
+        font-size: 20px;
 
-    .profile_mobile_skills ul li {
+        padding: 0px;
+    }
+    .profile_mobile_contact .profile_mobile_bio li{
+        font-size: 20px;
+        margin-bottom: 20px;
+        padding: 0px;
+    }
+    .profile_mobile_skills ul li{
         color: black;
         font-size: 10px;
     }
-
-    .profile_mobile {
+    .profile_mobile{
         color: black;
     }
-
     .port_mobile_link {
         text-align: center;
     }
@@ -883,7 +898,7 @@ footer {
         position: absolute;
         top: 0;
         right: 0;
-        font-size: 45px;
+        font-size: 35px;
     }
 }
 
