--- a/static/edit.css
+++ b/static/edit.css
@@ -69,7 +69,9 @@ nav {
     color: #8325B0;
     transition: all 0.2s ease-in-out;
 }
-
+.nav_searchBar{
+    display: none;
+}
 .nav_searchBar input {
     border-radius: 8px;
     padding: 13px 15px;
