--- a/static/home.css
+++ b/static/home.css
@@ -383,23 +383,20 @@ footer {
     display: none;
 }
 
-.empty {
-    align-items: center;
-}
-
 .empty svg {
-    /* margin-left: 25%; */
+
     width: 50%;
     height: 50%;
 }
-.svgContainer{
+
+.svgContainer {
     width: 100%;
     display: flex;
     align-items: center;
 }
-.svgContainer svg{
-    /* align-items: center; */
-    /* margin: auto; */
+
+.svgContainer svg {
+    margin: auto;
 }
 
 @media screen and (max-width: 912px) {
