--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -26,7 +26,7 @@
                     </svg></a>
             </div>
             <!-- Search Icon -->
-            <!-- <div class="mob_searchIcon">
+            <div class="mob_searchIcon">
                 <svg class="svg-search" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 52.966 52.966"
                     style="enable-background:new 0 0 52.966 52.966;" xml:space="preserve">
@@ -35,7 +35,7 @@
 	C52.074,52.304,52.086,51.671,51.704,51.273z M21.983,40c-10.477,0-19-8.523-19-19s8.523-19,19-19s19,8.523,19,19
 	S32.459,40,21.983,40z" />
                 </svg>
-            </div> -->
+            </div>
         </div>
         <div class="nav_mobile_searchBar">
             <form method="get" action="{%url 'search' %}">
